# GhanaSegNet

./: .gitignore  3_WEEK_SPRINT_PLAN.md  ARCHITECTURE_JUSTIFICATION.md  ARCHITECTURE_OPTIMIZATION_SUMMARY.md  Chapter_3_Methodology.md  Chapter_4_Implementation.md  Chapter_4_Results_and_Discussion.md  Chapter_5_Conclusion_and_Future.md  Chapter_5_Results.md  Chapters_1-3.md  Colab_Evaluate_and_Package.ipynb  ENHANCED_30_PERCENT_MIOU_ARCHITECTURE.md  Enhanced_GhanaSegNet_Training.ipynb  GhanaSegNet_Colab.ipynb  GhanaSegNet_Enhanced_Training.ipynb  NOTEBOOK_DOCUMENTATION.md  OPTIMIZATION_SUMMARY.md  Pipfile  README.md  RESEARCH_PROPOSAL.md  RESEARCH_TEAM_ANALYSIS.md  TRANSFER_LEARNING_STRATEGY.md  analysis_30_miou_feasibility.py  cleanup_repo.py  colab_setup.py  colab_training_cells.py  final_notebook_test.py  final_readiness_check.py  kk.ipynb  notebook_diagnostic.py  notebook_readiness_test.py  pyproject.toml  requirements.txt  run_clean_benchmarking.py  setup_compute.sh  split_all.py  test_colab_readiness.py  test_colab_ready.py  test_dataset_fix.py  test_enhanced_function.py  (+11 more)
analysis/: Comprehensive_Segmentation_Model_Thesis_Analysis.ipynb  Segmentation_Model_Benchmarking_Analysis.ipynb  aggregate_run_level_stats.py  computational_analysis.py  compute_val_iou_stats.py  create_figures_pipeline.py  evaluate_checkpoints_per_class.py  ghanaian_food_analysis.py  model_comparison_analysis.ipynb  model_comparison_analysis.py  model_comparison_analysis_structured.ipynb  parameter_comparison.py  quick_param_check.py  v2_deep_dive.py
dataloader/: dataset_loader.py
(+53 files in other folders)
